remove transition on inputs to stop flickering on focus (#410)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -87,7 +87,7 @@
 
 @layer components {
   .dark-input-field {
-    @apply py-3 px-4 rounded-md bg-black text-white border border-gray-24 focus:border-blue hover:border-white hover:border-opacity-70 transition-all;
+    @apply py-3 px-4 rounded-md bg-black text-white border border-gray-24 focus:border-blue hover:border-white hover:border-opacity-70;
   }
 
   .dark-input-field::placeholder {
